Tests refactoring